# Converter

./: .gitignore  Dockerfile.api  Dockerfile.base  Dockerfile.bot  docker-compose.yml  pyproject.toml  requirements.txt
api/: Dockerfile  pyproject.toml
api/api/: settings.py  urls.py
api/api_app/: models.py  serializers.py  urls.py  views.py
api/api_app/migrations/: 0001_initial.py
bot/: .env_example  Dockerfile  config.py  functional.py  main.py  pyproject.toml
bot/core/: config.py
bot/core/api/: api_abstract.py  api_helper.py  api_implementation.py
bot/dialogs/: __init__.py
bot/dialogs/convert/: dialogs.py  getters.py  handlers.py
bot/dialogs/start/: dialogs.py  getters.py
bot/handlers/: bot_commands.py  user.py
bot/states/: user.py
