[project]
name = "converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.17.0",
    "aiogram-dialog>=2.3.1",
    "betterlogging>=1.0.0",
    "django>=5.1.6",
    "djangorestframework>=3.15.2",
    "environs>=14.1.0",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "tinify>=1.6.0",
]
